# Teams-Manager

./: .gitignore  .markdownlint.json  README.md  SECURITY.md  package-lock.json  package.json  tailwind.config.js
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: release.yml
DEBUG/: README.md  index.html  package.json  tauri.conf.json
DEBUG/src/: App.tsx
DEBUG/src-tauri/: Cargo.toml
DEBUG/src-tauri/src/: auth.rs  lib.rs
DEBUG/src/components/: AuthScreen.tsx  Dashboard.tsx  DataTable.tsx
DEBUG/src/components/tabs/: DirectoryUsersTab.tsx  PhoneUsersTab.tsx  ResourceAccountsTab.tsx  SubscriptionsTab.tsx  UserLicensesTab.tsx
capabilities/: default.json
scripts/: update-badges.cjs
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  graph.rs  lib.rs  logger.rs  main.rs  updater.rs
src/components/: AuthScreen.tsx  ChangelogModal.tsx  Dashboard.tsx  DataTable.tsx  LicenseManagerModal.tsx  SettingsModal.tsx  SetupScreen.tsx  UpdateBanner.tsx  UpdateModal.tsx
src/components/tabs/: AutoAttendantsTab.tsx  CallQueuesTab.tsx  CartographieTab.tsx  DirectoryUsersTab.tsx  FreeNumbersTab.tsx  OrphanLicensesTab.tsx  PhoneUsersTab.tsx  ResourceAccountsTab.tsx  SubscriptionsTab.tsx  UserLicensesTab.tsx
src/i18n/: de.ts  en.ts  es.ts  fr.ts  index.tsx
