[package]
name = "teams-manager"
version = "0.1.0"
description = "Teams License & Telephony Manager"
authors = []
edition = "2021"

[lib]
name = "teams_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "teams-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
